test/2-error/adjacent-sym-num.ploy
main = <>->Int =>
  0a
